--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-i18n": "4.5.5",
     "@strapi/plugin-users-permissions": "4.5.5",
     "@strapi/strapi": "4.5.5",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "strapi-plugin-shopify-fields": "^4.0.0-beta4"
   },
   "author": {
     "name": "A Strapi developer"
