--- a/.github/workflows/deploy-appengine.yml
+++ b/.github/workflows/deploy-appengine.yml
@@ -32,8 +32,9 @@ jobs:
         run: ./create_yaml.sh
       
       - name: auth
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v2
         with:
+          workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}'
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
       
       - name: deploy
