--- a/.github/workflows/deploy-appengine.yml
+++ b/.github/workflows/deploy-appengine.yml
@@ -34,10 +34,10 @@ jobs:
       - name: auth
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}'
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
       
       - name: deploy
-        uses: google-github-actions/deploy-appengine@v0
+        uses: google-github-actions/deploy-appengine@v2
         with:
           project_id: '${{ secrets.GCP_PROJECT }}'
           deliverables: app.yaml
