--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-sqlite3": "7.4.6",
     "bloodhound-js": "^1.2.3",
     "i18n-iso-countries": "^7.5.0",
+    "mysql": "^2.18.1",
     "react-bootstrap-typeahead": "^6.0.0"
   },
   "author": {
