--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@strapi/plugin-i18n": "4.7.0",
     "@strapi/plugin-users-permissions": "4.7.0",
     "@strapi/strapi": "4.7.0",
-    "better-sqlite3": "7.4.6",
     "bloodhound-js": "^1.2.3",
     "i18n-iso-countries": "^7.5.0",
     "mysql": "^2.18.1",
-    "react-bootstrap-typeahead": "^6.0.0"
+    "react-bootstrap-typeahead": "^6.0.0",
+    "typescript": "^5.3.3"
   },
   "author": {
     "name": "A Strapi developer"
