--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.7.0",
-    "@strapi/plugin-i18n": "4.7.0",
-    "@strapi/plugin-users-permissions": "4.7.0",
-    "@strapi/strapi": "4.7.0",
+    "@strapi/plugin-graphql": "^4.19.0",
+    "@strapi/plugin-i18n": "^4.7.0",
+    "@strapi/plugin-users-permissions": "^4.7.0",
+    "@strapi/strapi": "^4.7.0",
     "bloodhound-js": "^1.2.3",
-    "i18n-iso-countries": "^7.5.0",
+    "i18n-iso-countries": "^7.8.0",
     "mysql": "^2.18.1",
-    "react-bootstrap-typeahead": "^6.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.3.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^5.3.11",
     "typescript": "^5.3.3"
   },
   "author": {
@@ -30,5 +34,8 @@
     "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "better-sqlite3": "^9.3.0"
+  }
 }
