--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "gcp-build": "strapi build"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.19.0",
-    "@strapi/plugin-i18n": "^4.19.0",
-    "@strapi/plugin-users-permissions": "^4.19.0",
-    "@strapi/strapi": "^4.19.0",
+    "@strapi/plugin-graphql": "^4.15.0",
+    "@strapi/plugin-i18n": "^4.15.0",
+    "@strapi/plugin-users-permissions": "^4.15.0",
+    "@strapi/strapi": "4.15.0",
     "bloodhound-js": "^1.2.3",
     "i18n-iso-countries": "^7.8.0",
     "mysql": "^2.18.1",
@@ -22,7 +22,7 @@
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "styled-components": "^5.3.11",
+    "styled-components": "5.3.3",
     "typescript": "^5.3.3"
   },
   "author": {
