--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@strapi/plugin-i18n": "^4.15.0",
     "@strapi/plugin-users-permissions": "^4.15.0",
     "@strapi/strapi": "4.15.0",
+    "@strapi/utils": "^4.20.2",
     "bloodhound-js": "^1.2.3",
     "i18n-iso-countries": "^7.8.0",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
+    "semver": "^7.6.0",
     "styled-components": "5.3.3",
     "typescript": "^5.3.3"
   },
