--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "lint:fix": "eslint --ext .js src --fix"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.25.19",
     "@strapi/plugin-i18n": "^4.25.19",
     "@strapi/plugin-users-permissions": "^4.25.19",
     "@strapi/provider-email-sendgrid": "^4.25.19",
@@ -43,6 +42,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.26.7",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-react": "^7.23.3",
     "better-sqlite3": "^9.3.0",
