--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/provider-email-sendgrid": "^4.25.19",
     "@strapi/strapi": "4.25.19",
     "@strapi/utils": "^4.25.19",
+    "ajv": "^8.17.1",
     "bloodhound-js": "^1.2.3",
     "i18n-iso-countries": "^7.8.0",
     "lodash": "^4.17.21",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "semver": "^7.6.0",
+    "sharp": "^0.33.5",
     "styled-components": "5.3.3",
     "typescript": "^5.3.3"
   },
