--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+
+GCS_BUCKET_NAME=xxx
+GCS_BASE_PATH=xxx
+GCS_BASE_URL=https://storage.googleapis.com/xxx
+GCS_PUBLIC_FILES=true
+GCS_UNIFORM=false
+GCS_SERVICE_ACCOUNT=xxx
