--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+TRANSFER_TOKEN_SALT=tobemodified
 
 GCS_BUCKET_NAME=xxx
 GCS_BASE_PATH=xxx
