add project metadata

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 HOST=0.0.0.0
 PORT=1337
 APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-
-GCS_BUCKET_NAME=xxx
-GCS_BASE_PATH=xxx
-GCS_BASE_URL=https://storage.googleapis.com/xxx
+API_TOKEN_SALT="your-api-token-salt"
+ADMIN_JWT_SECRET="your-admin-jwt-secret"
+JWT_SECRET="your-jwt-secret"
+TRANSFER_TOKEN_SALT="your-transfer-token-salt"
+SENDGRID_API_KEY="your-sendgrid-api-key"
+GCS_BUCKET_NAME="your-gcp-bucket-name"
+GCS_BASE_PATH="your-gcp-base-path"
+GCS_BASE_URL="https://storage.googleapis.com/your-gcp-bucket-name"
 GCS_PUBLIC_FILES=true
 GCS_UNIFORM=false
-GCS_SERVICE_ACCOUNT=xxx
+GCS_SERVICE_ACCOUNT="your-gcp-service-acocunt-json"
