--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@haniffalab/strapi-api",
-  "private": true,
   "version": "1.0.0",
-  "author": "Haniffa Lab",
-  "license": "MIT",
+  "private": true,
   "description": "A backend API powered by Strapi, designed to manage and serve content within the Cherita infrastructure.",
+  "license": "MIT",
+  "author": "Haniffa Lab",
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi",
+    "develop": "strapi develop",
     "gcp-build": "strapi build",
     "lint": "eslint --ext .js src",
-    "lint:fix": "eslint --ext .js src --fix"
+    "lint:fix": "eslint --ext .js src --fix",
+    "start": "strapi start",
+    "strapi": "strapi"
   },
   "dependencies": {
     "@strapi-community/strapi-provider-upload-google-cloud-storage": "^4.10.5",
@@ -35,18 +35,18 @@
     "styled-components": "5.3.3",
     "typescript": "^5.3.3"
   },
-  "strapi": {
-    "uuid": "ef523884-e001-4354-862a-d889fbe73214"
-  },
-  "engines": {
-    "node": ">=14.19.1 <=20.x.x",
-    "npm": ">=6.0.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-react": "^7.23.3",
     "better-sqlite3": "^9.3.0",
     "eslint": "^8.56.0"
+  },
+  "engines": {
+    "node": ">=14.19.1 <=20.x.x",
+    "npm": ">=6.0.0"
+  },
+  "strapi": {
+    "uuid": "ef523884-e001-4354-862a-d889fbe73214"
   }
 }
