--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haniffalab/strapi-api",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": true,
   "description": "A backend API powered by Strapi, designed to manage and serve content within the Cherita infrastructure.",
   "license": "MIT",
@@ -12,6 +12,7 @@
     "gcp-build": "strapi build",
     "lint": "eslint --ext .js src",
     "lint:fix": "eslint --ext .js src --fix",
+    "reinstall": "rm -rf node_modules package-lock.json && npm install",
     "start": "strapi start",
     "strapi": "strapi"
   },
