--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "@babel/core": "^7.26.7",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-react": "^7.23.3",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.4",
     "better-sqlite3": "^9.3.0",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "semantic-release": "^24.2.7"
   },
   "engines": {
     "node": ">=14.19.1 <=20.x.x",
