--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-react": "^7.23.3",
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^7.1.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.4",
     "better-sqlite3": "^9.3.0",
