fix: pass updated version to prep script

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -20,7 +20,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "node prepare-release.js"
+        "prepareCmd": "node prepare-release.js ${nextRelease.version}"
       }
     ],
     [
