--- a/.releaserc.json
+++ b/.releaserc.json
@@ -35,6 +35,6 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    "@semantic-release/github"
+    ["@semantic-release/github", { "releaseName": "${nextRelease.version}" }]
   ]
 }
