--- a/.releaserc.json
+++ b/.releaserc.json
@@ -35,6 +35,9 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    ["@semantic-release/github", { "releaseName": "${nextRelease.version}" }]
+    [
+      "@semantic-release/github",
+      { "releaseName": "${nextRelease.gitTag.replace(/^v/, '')}" }
+    ]
   ]
 }
