--- a/.github/workflows/deploy-appengine-dev.yml
+++ b/.github/workflows/deploy-appengine-dev.yml
@@ -31,6 +31,7 @@ jobs:
       GCS_UNIFORM: ${{ secrets.GCS_UNIFORM }}
       GCS_SERVICE_ACCOUNT: ${{ secrets.GCP_SA_KEY }}
       SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+      TRANSFER_TOKEN_SALT: ${{ secrets.TRANSFER_TOKEN_SALT }}
 
     steps:
       - uses: actions/checkout@v3
